🐛 Fix login page img not showing

--- a/src/theme/typography.scss
+++ b/src/theme/typography.scss
@@ -17,10 +17,6 @@
 	--font-size-small: 14px;
 	--font-size-legal: 12px;
 
-	* {
-		line-height: 1em;
-	}
-
 	font-family: var(--font-family);
 	font-size: var(--font-size-body);
 }
